--- a/README.me
+++ b/README.me
@@ -1,11 +1,11 @@
 1. Clone the repo to local
 2. Make sure Node and NPM are installed in local machine
-3. Navigate to server folder, install the node project by `npm install` and run `node server.js` the app is running on http://localhost:3000/
-4. Navigate to client folder, install the react project by `npm install`  and run `npm start` the backend is running on http://localhost:3001/
+3. Navigate to server-node folder, install the node project by `npm install` and run `node server.js` the app is running on http://localhost:3000/
+4. Navigate to client-react folder, install the react project by `npm install`  and run `npm start` the backend is running on http://localhost:3001/
 
 Front End: 
 Minimal design with React and inline CSS for simplicity.
-Added logic for detecting if character goes over 100 to hide the full post.
+Added logic for detecting if characters limit goes over 100 to hide the full post.
 
 Back End:
 Use Node/Express for its simplicity and speed
